--- a/deploy-pax/action.yml
+++ b/deploy-pax/action.yml
@@ -11,5 +11,7 @@ runs:
         mv plugin.pax ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
         mv plugin.tar ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
         jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
-        jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar        
+        jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
+        echo "${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax"
+        echo "${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar"
       shell: bash
