--- a/core/prepare/envvars.env
+++ b/core/prepare/envvars.env
@@ -25,5 +25,4 @@ PAX_HOSTNAME=zzow04.zowe.marist.cloud
 PAX_SSH_PORT=22
 NODE_VERSION=v12.18.4
 
-NODE_HOME=/ZOWE/node/node-${NODE_VERSION}-os390-s390x
-NODE_ENV_VARS=_TAG_REDIR_ERR=txt _TAG_REDIR_IN=txt _TAG_REDIR_OUT=txt __UNTAGGED_READ_MODE=V6
+MARIST_NODE=/ZOWE/node/node-v12.18.4-os390-s390x
