--- a/core/prepare/action.yml
+++ b/core/prepare/action.yml
@@ -25,7 +25,6 @@ runs:
         cat envvars.env >> $GITHUB_ENV
       working-directory: ${{ github.action_path }}
       shell: bash
-      
     
     - name: 'determine current branch or PR'
       run: |
@@ -33,7 +32,8 @@ runs:
         then
           echo CURRENT_BRANCH=${GITHUB_REF#refs/heads/} >> $GITHUB_ENV
         else
-          echo CURRENT_BRANCH=PR-${{ github.event.pull_request.number }} >> $GITHUB_ENV
+          echo CURRENT_BRANCH=${{ github.event.pull_request.base.ref }} >> $GITHUB_ENV
+          echo CURRENT_PR=PR-${{ github.event.pull_request.number }} >> $GITHUB_ENV
         fi
       shell: bash
     
