--- a/core/deploy/action.yml
+++ b/core/deploy/action.yml
@@ -11,9 +11,14 @@ runs:
         mv zlux.tar ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
         if [ -n ${{ github.event.pull_request.number }} ]
         then
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-${CURRENT_BRANCH}-${CURRENT_PR}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-${CURRENT_BRANCH}-${CURRENT_PR}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
+          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_PR}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
+          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_PR}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
           echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-${CURRENT_BRANCH}-${CURRENT_PR}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax"
           echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-${CURRENT_BRANCH}-${CURRENT_PR}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar"
+        else
+          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
+          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
+          echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-${CURRENT_BRANCH}-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax"
+          echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-${CURRENT_BRANCH}-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar"
         fi
       shell: bash
