--- a/core/prepare/action.yml
+++ b/core/prepare/action.yml
@@ -31,19 +31,7 @@ runs:
     
     - name: 'determine current branch or PR'
       run: |
-        if [ -z ${{ inputs.DEFAULT_BRANCH }} ]
-        then
-          echo "yes"
-        fi
-        if [ -n ${{ inputs.DEFAULT_BRANCH }} ]
-        then
-          echo "no"
-        fi
-        
-        if [ -z ${{ inputs.DEFAULT_BRANCH }} ]
-        then 
-          echo CURRENT_BRANCH=${{ inputs.DEFAULT_BRANCH }} >> $GITHUB_ENV
-        elif [ -z ${{ github.event.pull_request.number }} ]
+        if [ -z ${{ github.event.pull_request.number }} ]
         then
           echo CURRENT_BRANCH=${GITHUB_REF#refs/heads/} >> $GITHUB_ENV
         else
