switched pipeline for core build
Signed-off-by: James Struga <xhejmsstruga@gmail.com>

--- a/core/deploy/action.yml
+++ b/core/deploy/action.yml
@@ -7,24 +7,12 @@ runs:
     - name: 'deploy'
       run: |
         TIMESTAMP=`date +%Y%m%d.%H%M%S`
-        mv zlux.pax ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
-        mv zlux.tar ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
-        if [ -n "${{ inputs.DEFAULT_BRANCH }}" ]
-        then
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_BRANCH}-PR-WORKFLOW/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.pax
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_BRANCH}-PR-WORKFLOW/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.tar
-          echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_BRANCH}-PR-WORKFLOW/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.pax"
-          echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_BRANCH}-PR-WORKFLOW/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.tar"
-        elif [ -n ${{ github.event.pull_request.number }} ]
-        then
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_PR}/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.pax
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_PR}/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.tar
-          echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_PR}/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.pax"
-          echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_PR}/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.tar"
-        else
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_BRANCH}/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.pax
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_BRANCH}/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.tar
-          echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_BRANCH}/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.pax"
-          echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-$REPOSITORY_NAME-${CURRENT_BRANCH}/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.tar"
-        fi
+        mv zlux.pax zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.pax
+        mv zlux.tar zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.tar
+        
+        jfrog rt u zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-RC/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.pax
+        jfrog rt u zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-RC/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.tar
+        echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-RC/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.pax"
+        echo "${ARTIFACTORY_REPO}/zlux-core/${ZOWE_VERSION}-RC/zlux-core-${ZOWE_VERSION}-${TIMESTAMP}.tar"
+        
       shell: bash
