--- a/core/prepare/action.yml
+++ b/core/prepare/action.yml
@@ -10,9 +10,9 @@ inputs:
   github-email:
     description: 'github email'
     required: false
-  default-base:
-    description: 'base branch to build from'
-    required: false
+  zowe-version:
+    description: 'please eneter version you want to build'
+    required: true
 
 runs:
   using: "composite"
@@ -27,21 +27,6 @@ runs:
         mv envvars.env.new envvars.env
         cat envvars.env >> $GITHUB_ENV
       working-directory: ${{ github.action_path }}
-      shell: bash
-    
-    - name: 'determine current branch or PR'
-      run: |
-        if [ -n "${{ inputs.DEFAULT_BRANCH }}" ]
-        then 
-          echo CURRENT_BRANCH=${{ inputs.DEFAULT_BRANCH }} >> $GITHUB_ENV
-        elif [ -z ${{ github.event.pull_request.number }} ]
-        then
-          echo CURRENT_BRANCH=${GITHUB_REF#refs/heads/} >> $GITHUB_ENV
-        else
-          echo CURRENT_BRANCH=${{ github.event.pull_request.base.ref }} >> $GITHUB_ENV
-          echo CURRENT_PR=PR-${{ github.event.pull_request.number }} >> $GITHUB_ENV
-        fi
-        echo REPOSITORY_NAME=$GITHUB_REPOSITORY | sed 's/zowe\///' >> $GITHUB_ENV
       shell: bash
     
     - name: 'setup apt-get'
@@ -68,14 +53,7 @@ runs:
         echo GITHUB_REPOSITORY=${{ github.repository }} >> $GITHUB_ENV
       shell: bash
     
-    - name: 'get Zowe version'
+    - name: 'Set Zowe version'
       run: |
-        git clone --branch staging https://github.com/zowe/zowe-install-packaging.git
-        ZOWE_VERSION=$(cat zowe-install-packaging/manifest.json.template  \
-          | grep version \
-          | head -1 \
-          | awk -F: '{ print $2 }' \
-          | sed 's/[",]//g')
-        echo "ZOWE_VERSION=$ZOWE_VERSION" | tr -d ' ' >> $GITHUB_ENV
-        rm -rf zowe-install-packaging
+        echo ZOWE_VERSION=${{ inputs.zowe-version }} >> $GITHUB_ENV
       shell: bash
