--- a/plugins/prepare-workflow/envvars.env
+++ b/plugins/prepare-workflow/envvars.env
@@ -16,4 +16,4 @@ DEFAULT_PAX_PACKAGING_SSH_PORT=22
 
 GITHUB_PROJECT=zowe
 ARTIFACTORY_REPO=libs-snapshot-local/org/zowe/zlux
-DEFAULT_PLUGIN_BRANCH=staging
+DEFAULT_PLUGIN_BRANCH=v2.x/staging
