--- a/plugins/zlux-plugins/action.yml
+++ b/plugins/zlux-plugins/action.yml
@@ -26,12 +26,12 @@ runs:
         if ${{ inputs.build-zss }}
         then 
           git 
-          git clone https://github.com/zowe/zss.git -b ${env.BRANCH_NAME} &&
-          git clone https://github.com/zowe/zowe-common-c.git -b ${env.BRANCH_NAME} &&
-          cd zss &&
-          git submodule update --init &&
-          tar cf ../../zss.tar -H ustar * &&
-          cd ../zowe-common-c && 
+          git clone https://github.com/zowe/zss.git -b ${env.BRANCH_NAME} 
+          git clone https://github.com/zowe/zowe-common-c.git -b ${env.BRANCH_NAME} 
+          cd zss 
+          git submodule update --init 
+          tar cf ../../zss.tar -H ustar * 
+          cd ../zowe-common-c 
           tar cf ../../zowe-common-c.tar -H ustar *
           echo "plugin contains ZSS code"
         else
