add new variable
Signed-off-by: James Struga <xhejmsstruga@gmail.com>

--- a/core/prepare/action.yml
+++ b/core/prepare/action.yml
@@ -41,7 +41,6 @@ runs:
           echo CURRENT_BRANCH=${{ github.event.pull_request.base.ref }} >> $GITHUB_ENV
           echo CURRENT_PR=PR-${{ github.event.pull_request.number }} >> $GITHUB_ENV
         fi
-        echo DEPLOY_BRANCH=$CURRENT_BRANCH | sed -e "s+\/+\-+" >> $GITHUB_ENV
         echo REPOSITORY_NAME=$GITHUB_REPOSITORY | sed 's/zowe\///' >> $GITHUB_ENV
       shell: bash
     
@@ -67,6 +66,7 @@ runs:
           echo GITHUB_PASSWORD=${{ inputs.github-password }} >> $GITHUB_ENV
         fi
         echo GITHUB_REPOSITORY=${{ github.repository }} >> $GITHUB_ENV
+        echo DEPLOY_BRANCH=$CURRENT_BRANCH | sed -e 's+\/+\-+' >> $GITHUB_ENV
       shell: bash
     
     - name: 'get Zowe version'
