--- a/core/prepare/envvars.env
+++ b/core/prepare/envvars.env
@@ -25,3 +25,5 @@ PAX_SSH_PORT=22
 NODE_VERSION=v12.18.4
 
 MARIST_NODE=/ZOWE/node/node-v12.18.4-os390-s390x
+REPOSITORY_NAME=zlux-build
+CURRENT_BRANCH=v2.x/rc
