Fix staging branch name, and switch to node14
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/core/prepare/envvars.env
+++ b/core/prepare/envvars.env
@@ -18,10 +18,10 @@ GITHUB_PROJECT=zowe
 ARTIFACTORY_REPO=libs-snapshot-local/org/zowe/zlux
 
 #added by me 
-ZOWE_MANIFEST_URL=https://raw.githubusercontent.com/zowe/zowe-install-packaging/staging/manifest.json.template
+ZOWE_MANIFEST_URL=https://raw.githubusercontent.com/zowe/zowe-install-packaging/v1.x/staging/manifest.json.template
 
 PAX_HOSTNAME=zzow04.zowe.marist.cloud
 PAX_SSH_PORT=22
-NODE_VERSION=v12.18.4
+NODE_VERSION=v14.15.1
 
-MARIST_NODE=/ZOWE/node/node-v12.18.4-os390-s390x
+MARIST_NODE=/ZOWE/node/node-v14.15.1-os390-s390x
