--- a/plugins/deploy-pax/action.yml
+++ b/plugins/deploy-pax/action.yml
@@ -12,14 +12,14 @@ runs:
         mv plugin.tar ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
         if [ $RELEASE = "true" ];
         then
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-RC/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-RC/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
-          echo "${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-RC/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax"
-          echo "${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-RC/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar"
+          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-V2.X-RC/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
+          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-V2.X-RC/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
+          echo "${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-V2.X-RC/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax"
+          echo "${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-V2.X-RC/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar"
         else
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
-          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
-          echo "${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax"
-          echo "${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar"
+          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${DEPLOY_BRANCH^^}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
+          jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${DEPLOY_BRANCH^^}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
+          echo "${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${DEPLOY_BRANCH^^}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax"
+          echo "${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${DEPLOY_BRANCH^^}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar"
         fi      
       shell: bash
