--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -43,6 +43,6 @@ runs:
           -X POST \
           -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: token ${{ inputs.github-token }}" \
-          https://api.github.com/repos/zowe/zss/releases \
-          -d '{"tag_name":"v1.29.0","target_commitish":"v1.x/rc","name":"v1.29.0","body":"","draft":false,"prerelease":false,"generate_release_notes":false}'
+          https://api.github.com/repos/zowe/zss/merges \
+          -d '{"base":"v1.x/master","head":"v1.x/rc","commit_message":"Relase"}'
       shell: bash
