--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -37,12 +37,9 @@ runs:
       working-directory: ${{ github.action_path }}
       shell: bash
     
-    - name: 'create release'
+    - name: 'Merge to master'
       run: |
-        curl \
-          -X POST \
-          -H "Accept: application/vnd.github.v3+json" \
-          -H "Authorization: token ${{ inputs.github-token }}" \
-          https://api.github.com/repos/zowe/zss/merges \
-          -d '{"base":"v1.x/master","head":"v1.x/rc","commit_message":"Relase"}'
+        for x in $REPOS; do
+          echo $x
+        done
       shell: bash
