--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -45,6 +45,7 @@ runs:
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token ${{ inputs.github-token }}" \
             https://api.github.com/repos/zowe/$x/merges \
-            -d '{"base":"v1.x/master","head":"v1.x/rc","commit_message":"Zowe Suite V1.28.0"}'
+            -d '{"base":"v1.x/master","head":"v1.x/rc","commit_message":"Zowe Suite V1.28.0"}' \
+            -w "%{http_code}"
         done
       shell: bash
