--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -19,6 +19,9 @@ inputs:
   github-token:
     description: 'auth token'
     required: false
+  merge-to-master:
+    description: 'Merge rc to master'
+    required: false
     
     
 
@@ -37,15 +40,48 @@ runs:
       working-directory: ${{ github.action_path }}
       shell: bash
     
-    - name: 'Merge to master'
+    
+    - name: 'determine version'
       run: |
-        for x in $REPOS; do
-          curl \
-            -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token ${{ inputs.github-token }}" \
-            https://api.github.com/repos/zowe/$x/merges \
-            -d '{"base":"v1.x/master","head":"v1.x/rc","commit_message":"Zowe Suite V1.28.0"}' \
-            -w "%{http_code}"
-        done
+        if [ ${release-version: 1:1} == 1 ];
+        then
+          echo RELEASE_BRANCH="v1.x/rc" >> $GITHUB_ENV
+          echo MASTER_BRANCH="v1.x/master" >> $GITHUB_ENV
+        else
+          echo RELEASE_BRANCH="v2.x/rc" >> $GITHUB_ENV
+          echo MASTER_BRANCH="v2.x/master" >> $GITHUB_ENV
+        fi
       shell: bash
+      
+    
+    - name: 'merge to master'
+      run: |
+        if [ "${{ inputs.merge-to-master }}" = "true" ];
+        then 
+            for x in $REPOS; do
+              curl \
+                -X POST \
+                -H "Accept: application/vnd.github.v3+json" \
+                -H "Authorization: token ${{ inputs.github-token }}" \
+                https://api.github.com/repos/zowe/$x/merges \
+                -d '{"base":"${MASTER_BRANCH}","head":"${RELEASE_BRANCH}","commit_message":"Zowe Suite ${release-version}"}' \
+                -w "%{http_code}"
+            done
+        else
+          echo "Nothing to do here"
+        fi
+      shell: bash
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
