--- a/deploy-pax/action.yml
+++ b/deploy-pax/action.yml
@@ -10,6 +10,7 @@ runs:
         TIMESTAMP=`date +%Y%m%d.%H%M%S`
         mv plugin.pax ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
         mv plugin.tar ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
+        CURRENT_BRANCH="${CURRENT_BRANCH////-}"
         jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH^^}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax
         jfrog rt u ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH^^}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.tar
         echo "${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZOWE_VERSION}-${CURRENT_BRANCH^^}/${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax"
