--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -25,6 +25,9 @@ inputs:
   merge-to-rc:
     description: 'Merge staging to rc'
     required: false  
+  zowe-common-c-head:
+    description: 'head of zowe-common-c'
+    required: false
     
 
 runs:
@@ -80,31 +83,28 @@ runs:
     - name: 'merge staging to rc'
       run: |
         if [ "${{ inputs.merge-to-rc }}" = "true" ];
-        then 
+        then
             for x in $REPOS; do
-              curl \
+              if [ $x == "zowe-common-c" ]
+              then 
+                curl \
+                -X POST \
+                -H "Accept: application/vnd.github.v3+json" \
+                -H "Authorization: token ${{ inputs.github-token }}" \
+                https://api.github.com/repos/zowe/$x/merges \
+                -d '{"base":"${RELEASE_BRANCH}","head":"${{ inputs.zowe-common-c-head }}","commit_message":"Zowe Suite ${release-version}"}' \
+                -w "%{http_code}"
+              else
+                curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: token ${{ inputs.github-token }}" \
                 https://api.github.com/repos/zowe/$x/merges \
                 -d '{"base":"${RELEASE_BRANCH}","head":"${STAGING_BRANCH}","commit_message":"Zowe Suite ${release-version}"}' \
                 -w "%{http_code}"
+              fi
             done
         else
           echo "Nothing to do here"
         fi
       shell: bash
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
