--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -88,8 +88,8 @@ runs:
         then
             for x in $REPOS; do
               if [ $x == "zowe-common-c" ]
-              echo 'merging {$x}'
               then 
+                echo 'merging {$x} common-c'
                 curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
