--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -86,25 +86,25 @@ runs:
         echo ${RELEASE_BRANCH}
         echo ${STAGING_BRANCH}
         then
-            for x in $REPOS; do
-              if [ $x == "zowe-common-c" ]
+            for val in $REPOS; do
+              if [ $val == "zowe-common-c" ]
               then 
-                echo 'merging { $x } common-c'
+                echo $val
                 curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: token ${{ inputs.github-token }}" \
-                https://api.github.com/repos/zowe/$x/merges \
+                https://api.github.com/repos/zowe/$val/merges \
                 -d '{"base":"${RELEASE_BRANCH}","head":"${{ inputs.zowe-common-c-head }}","commit_message":"Zowe Suite ${release-version}"}' \
                 -w "%{http_code}"
               else
-                echo 'merging {$x}'
-                echo 'https://api.github.com/repos/zowe/$x/merges'
+                echo $val
+                echo 'https://api.github.com/repos/zowe/$val/merges'
                 curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: token ${{ inputs.github-token }}" \
-                https://api.github.com/repos/zowe/$x/merges \
+                https://api.github.com/repos/zowe/$val/merges \
                 -d '{"base":"${RELEASE_BRANCH}","head":"${STAGING_BRANCH}","commit_message":"Zowe Suite ${release-version}"}' \
                 -w "%{http_code}"
               fi
