--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -90,21 +90,24 @@ runs:
               if [ $val == "zowe-common-c" ]
               then 
                 echo $val
+                base_url="https://api.github.com/repos/zowe/$val/merges"
+                echo $base_url
                 curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: token ${{ inputs.github-token }}" \
-                "https://api.github.com/repos/zowe/${val}/merges" \
+                $base_url \
                 -d '{"base":"${RELEASE_BRANCH}","head":"${{ inputs.zowe-common-c-head }}","commit_message":"Zowe Suite ${release-version}"}' \
                 -w "%{http_code}"
               else
                 echo $val
-                echo 'https://api.github.com/repos/zowe/$val/merges'
+                base_url="https://api.github.com/repos/zowe/$val/merges"
+                echo $base_url
                 curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: token ${{ inputs.github-token }}" \
-                "https://api.github.com/repos/zowe/${val}/merges" \
+                $base_url \
                 -d '{"base":"${RELEASE_BRANCH}","head":"${STAGING_BRANCH}","commit_message":"Zowe Suite ${release-version}"}' \
                 -w "%{http_code}"
               fi
@@ -113,3 +116,4 @@ runs:
           echo "Nothing to do here"
         fi
       shell: bash
+ 
