--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -92,6 +92,7 @@ runs:
                 echo $val
                 base_url="https://api.github.com/repos/zowe/$val/merges"
                 echo $base_url
+                echo "test"
                 curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
@@ -103,12 +104,13 @@ runs:
                 echo $val
                 base_url="https://api.github.com/repos/zowe/$val/merges"
                 echo $base_url
+                echo "test"
                 curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: token ${{ inputs.github-token }}" \
                 $base_url \
-                -d '{"base":"${RELEASE_BRANCH}","head":"${STAGING_BRANCH}","commit_message":"Zowe Suite ${release-version}"}' \
+                -d '{"base":"v2.x/rc","head":"v2.x/staging","commit_message":"Zowe Suite ${release-version}"}' \
                 -w "%{http_code}"
               fi
             done
