--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -104,13 +104,14 @@ runs:
                 echo $val
                 base_url="https://api.github.com/repos/zowe/$val/merges"
                 echo $base_url
+                jpost = "{\"base\" : \"${RELEASE_BRANCH}\" , \"head\" : \"${STAGING_BRANCH}\" , \"commit_message\" :  ${release-version}\"}"
                 echo "test"
                 curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: token ${{ inputs.github-token }}" \
                 $base_url \
-                -d '{"base": \"${RELEASE_BRANCH}\","head": \"${STAGING_BRANCH}\","commit_message": \"Zowe Suite ${release-version}\"}' \
+                -d "${jpost}" \
                 -w "%{http_code}"
               fi
             done
