--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -91,8 +91,6 @@ runs:
               then 
                 echo $val
                 base_url="https://api.github.com/repos/zowe/$val/merges"
-                echo $base_url
-                echo "test"
                 curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
@@ -103,15 +101,12 @@ runs:
               else
                 echo $val
                 base_url="https://api.github.com/repos/zowe/$val/merges"
-                echo $base_url
-                jpost = "{\"base\" : \"${RELEASE_BRANCH}\" , \"head\" : \"${STAGING_BRANCH}\" , \"commit_message\" :  ${release-version}\"}"
-                echo "test"
                 curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: token ${{ inputs.github-token }}" \
                 $base_url \
-                -d "${jpost}" \
+                -d '{"base": "$RELEASE_BRANCH","head": "$STAGING_BRANCH","commit_message": "Zowe Suite $release-version"}' \
                 -w "%{http_code}"
               fi
             done
