--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -140,6 +140,7 @@ runs:
           done
         else
          echo 'nothing to do'
-        fi          
+        fi   
+      shell: bash        
       
 
